--- a/designcomponents.html
+++ b/designcomponents.html
@@ -9,7 +9,7 @@
 <!-- // UIKIT --> 
  
   <!-- UIkit CSS -->
-  <link rel="stylesheet" href="https://amcrew2.netlify.app/ac-uikit.css">
+  <link rel="stylesheet" href="  https://yslhp.github.io/designfiles/css/uikit_2.css  ">
 
 
 
