--- a/designcomponents.html
+++ b/designcomponents.html
@@ -78,7 +78,7 @@
 <li><a href="https://getuikit.com/docs/introduction/" title="Introduction">
 <div>DOCUMENTATION</div>
 </a></li>
-<li><a href="https://www.ysl150.com/blog/blog-1" title="Projects">
+<li><a href="#" title="Projects">
 <div>PROJECTS</div>
 </a></li>
 
@@ -116,10 +116,10 @@
 <div id="stacks_in_p393_n29_page52" class="stacks_in net_archetypon_stack_uikit_nav_stack">
 <!--start of UIkit Nav stack-->
 <ul class="uk-nav uikit-body-font  custom">
-<li class=""><a href="https://american-cr.webflow.io/blog/blog-3"><span class="uk-margin-small-right" uk-icon="icon: home"></span>OVERVIEW</a></li>
-<li class=""><a href="https://american-cr.webflow.io/blog/blog-3"><span class="uk-margin-small-right" uk-icon="icon: file-text"></span>DOCUMENTATION</a></li>
-<li class=""><a href="https://american-cr.webflow.io/blog/blog-3"><span class="uk-margin-small-right" uk-icon="icon: bolt"></span>PROJECTS</a></li>
-<li class=""><a href="https://american-cr.webflow.io/blog/blog-3"><span class="uk-margin-small-right" uk-icon="icon: lifesaver"></span>SUPPORT</a></li>
+<li class=""><a href="#"><span class="uk-margin-small-right" uk-icon="icon: home"></span>OVERVIEW</a></li>
+<li class=""><a href="#"><span class="uk-margin-small-right" uk-icon="icon: file-text"></span>DOCUMENTATION</a></li>
+<li class=""><a href="#"><span class="uk-margin-small-right" uk-icon="icon: bolt"></span>PROJECTS</a></li>
+<li class=""><a href="#"><span class="uk-margin-small-right" uk-icon="icon: lifesaver"></span>SUPPORT</a></li>
 <li>
 <div id="" class="uk-margin" uk-margin=""></div>
 <!--start of UIKit button stack-->
